--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "angular-touch": "^1.4.0",
     "angular-local-storage": "^0.2.7",
     "foundation-apps": "^1.2.0",
-    "angular-material": "^1.0.9"
+    "angular-material": "^1.0.9",
+    "json-export-excel": "ng-json-export-excel#^1.0.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
