--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "angular-local-storage": "^0.2.7",
     "foundation-apps": "^1.2.0",
     "angular-material": "^1.0.9",
-    "json-export-excel": "ng-json-export-excel#^1.0.2"
+    "json-export-excel": "ng-json-export-excel#^1.0.2",
+    "jspdf-plugins": "jsPDF-plugins#*"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
