se actualizaron los permisos de usuario se agrego huertas en grillUpdate y en el grillAdd se agrego padding a buscador de humedad

--- a/bower.json
+++ b/bower.json
@@ -16,8 +16,7 @@
     "foundation-apps": "^1.2.0",
     "angular-material": "^1.0.9",
     "json-export-excel": "ng-json-export-excel#^1.0.2",
-    "jspdf-plugins": "jsPDF-plugins#*",
-    "angular-fixed-table-header": "^0.2.1"
+    "jspdf-plugins": "jsPDF-plugins#*"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
